# Lusik-and-sons-

./: .gitignore  .replit  404.html  BRANCHING.md  CLAUDE.md  IMPLEMENTATION_REPORT.md  LAUNCH_CHECKLIST.md  NEXTJS_MIGRATION_PLAN.md  README.md  SECURITY_REVIEW.md  SERVICE_SIGNUP_CHECKLIST.md  index.html  lighthouserc.json  make-drive.bat  manifest.webmanifest  netlify.toml  next.config.mjs  package-lock.json  package.json  playwright.config.mjs  postcss.config.mjs  robots.txt  security.txt  sitemap.xml  tailwind.config.mjs  tsconfig.json  vite.config.mjs
.github/: dependabot.yml
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  template.tsx
builder/: brand.json  chrome.json  i18n.json  theme.json
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.txt
desktop/src-tauri/src/: main.rs
docs/: BUILDER_GUIDE.md  BUILDER_PLAN.md  BUILDER_ROADMAP.md  CMS_AND_ADMIN.md  CODE_REVIEW_2026-07.md  COMMUNICATION_COACH_PLAN.md  CREATION_STUDIO_OVERVIEW.md  CREATION_STUDIO_PLAN.md  GAME_LAB_PLAN.md  GAME_MODE_PLAN.md  INSPIRATION_ROADMAP.md  MEDIA_STUDIO_PLAN.md  PHASE8_FLIP_RUNBOOK.md  PORTABLE_LAYOUT.md  RETRO_GAME_ROOM.md  SEO_OPTIMIZER.md  SESSION_HANDOFF.md  SHIP_THE_DRIVE.md  SOFTWARE_CREATION_MODE_PLAN.md  TAX_ASSISTANT_PLAN.md
ios/: .gitignore  APP_STORE.md  README.md  ROADMAP.md  SUBMISSION.md  project.yml
launcher/: .gitignore  README.md  app_windows.go  go.mod  main_other.go  main_windows.go  winapi_windows.go
(+763 files in other folders)
